--- a/public/styles.css
+++ b/public/styles.css
@@ -91,7 +91,7 @@ body{
 }
 @media (min-width:760px){
   .active-icon{
-    background-color: #0d1842;
+    background-color: #999eb1;
     color:white;
   }
 }
