Added: Brand name and logo

--- a/public/styles.css
+++ b/public/styles.css
@@ -313,3 +313,7 @@ input::-webkit-inner-spin-button {
 .tooltip:hover .tooltiptext {
   visibility: visible;
 }
+
+.awesome-shadow-13{
+  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+}
